[gd_scene load_steps=16 format=3 uid="uid://cs4xpdvhah7vi"]

[ext_resource type="Script" path="res://Area/UI/LevelPrep/team_selector.gd" id="1_gqch5"]
[ext_resource type="PackedScene" uid="uid://drwq23rlohss0" path="res://Common/UI/Buttons/Directional.tscn" id="1_r6vfd"]
[ext_resource type="Texture2D" uid="uid://bly3ctegc7ako" path="res://Common/UI/Buttons/Textures/right.tres" id="3_3i0mx"]
[ext_resource type="PackedScene" uid="uid://b08d1lxgq7d4s" path="res://Menu/Footer/footer_button.tscn" id="3_tefpo"]
[ext_resource type="Texture2D" uid="uid://ccrd25xnktxko" path="res://Common/UI/Buttons/Textures/party_frame_quest_btn1.png" id="4_wv8dn"]
[ext_resource type="Texture2D" uid="uid://jhha8v1u1c25" path="res://Area/UI/LevelPrep/Textures/mission_check_unit_frame.png" id="5_8cox8"]
[ext_resource type="PackedScene" uid="uid://dl6vyn6hs57of" path="res://Menu/SubMenu/Unit/Display/unit_thumbnail.tscn" id="6_c3wll"]
[ext_resource type="FontFile" uid="uid://do4ohitulwyul" path="res://Common/Arial Bold.ttf" id="8_ev5ey"]
[ext_resource type="Texture2D" uid="uid://ixplshaltyki" path="res://Area/UI/LevelPrep/Textures/leader_skill_cap.png" id="9_v1ryt"]
[ext_resource type="Texture2D" uid="uid://bqyns4860aro6" path="res://Area/UI/LevelPrep/Textures/friend_skill_cap.png" id="10_tbnxk"]
[ext_resource type="PackedScene" uid="uid://dvtxwq4tw3g50" path="res://Common/UI/Buttons/large_button.tscn" id="13_hpqig"]
[ext_resource type="Texture2D" uid="uid://dc8c5x4mctnti" path="res://Area/UI/LevelPrep/Textures/deck_name_label.png" id="13_nbeer"]

[sub_resource type="Animation" id="Animation_cmxit"]
resource_name = "MoveText"
length = 8.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LeaderStatsDescription:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(528, 120), Vector2(26, 120)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FriendStatsDescription:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(524, 317), Vector2(26, 317)]
}

[sub_resource type="Animation" id="Animation_w0yg0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LeaderStatsDescription:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(528, 120)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FriendStatsDescription:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(524, 317)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q2k63"]
_data = {
"MoveText": SubResource("Animation_cmxit"),
"RESET": SubResource("Animation_w0yg0")
}

[node name="TeamSelector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gqch5")

[node name="Directional" parent="." instance=ExtResource("1_r6vfd")]
layout_mode = 0
offset_left = 8.0
offset_top = 360.0
offset_right = 68.0
offset_bottom = 423.0

[node name="Directional2" parent="." instance=ExtResource("1_r6vfd")]
layout_mode = 0
offset_left = 576.0
offset_top = 359.0
offset_right = 636.0
offset_bottom = 422.0
icon = ExtResource("3_3i0mx")
direction = "Right"

[node name="ManageSquad" parent="." instance=ExtResource("3_tefpo")]
layout_mode = 0
offset_top = 6.0
offset_right = 218.0
offset_bottom = 69.0
icon = ExtResource("4_wv8dn")

[node name="BG" type="TextureRect" parent="."]
layout_mode = 0
offset_top = 64.0
offset_right = 644.0
offset_bottom = 357.0
texture = ExtResource("5_8cox8")

[node name="UnitThumbnail" parent="." instance=ExtResource("6_c3wll")]
layout_mode = 0
offset_left = 16.0
offset_top = 160.0
offset_right = 126.0
offset_bottom = 270.0

[node name="UnitThumbnail2" parent="." instance=ExtResource("6_c3wll")]
layout_mode = 0
offset_left = 123.0
offset_top = 160.0
offset_right = 233.0
offset_bottom = 270.0

[node name="UnitThumbnail3" parent="." instance=ExtResource("6_c3wll")]
layout_mode = 0
offset_left = 224.0
offset_top = 160.0
offset_right = 334.0
offset_bottom = 270.0

[node name="UnitThumbnail4" parent="." instance=ExtResource("6_c3wll")]
layout_mode = 0
offset_left = 324.0
offset_top = 160.0
offset_right = 434.0
offset_bottom = 270.0

[node name="UnitThumbnail5" parent="." instance=ExtResource("6_c3wll")]
layout_mode = 0
offset_left = 424.0
offset_top = 160.0
offset_right = 534.0
offset_bottom = 270.0

[node name="LeaderStatsDescription" type="Label" parent="."]
layout_mode = 0
offset_left = 528.0
offset_top = 120.0
offset_right = 625.0
offset_bottom = 146.0
theme_override_fonts/font = ExtResource("8_ev5ey")
text = "Leader Stats"

[node name="FriendStatsDescription" type="Label" parent="."]
layout_mode = 0
offset_left = 524.0
offset_top = 317.0
offset_right = 621.0
offset_bottom = 343.0
theme_override_fonts/font = ExtResource("8_ev5ey")
text = "Leader Stats"

[node name="FriendSkillLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 332.0
offset_top = 285.0
offset_right = 445.0
offset_bottom = 312.0
theme_override_colors/font_color = Color(0.752941, 0.490196, 0.0470588, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_ev5ey")
theme_override_font_sizes/font_size = 20
text = "Friend Skill"
horizontal_alignment = 2

[node name="LeaderSkillLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 208.0
offset_top = 89.0
offset_right = 321.0
offset_bottom = 116.0
theme_override_colors/font_color = Color(0.752941, 0.490196, 0.0470588, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_ev5ey")
theme_override_font_sizes/font_size = 20
text = "Leader Skill"
horizontal_alignment = 2

[node name="LeaderSkill" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 80.0
offset_right = 201.0
offset_bottom = 120.0
texture = ExtResource("9_v1ryt")

[node name="FriendSkill" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 448.0
offset_top = 275.0
offset_right = 625.0
offset_bottom = 315.0
texture = ExtResource("10_tbnxk")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_q2k63")
}
autoplay = "MoveText"

[node name="SquadNameBG" type="TextureRect" parent="."]
z_index = -1
layout_mode = 0
offset_left = 485.0
offset_top = 27.0
offset_right = 643.0
offset_bottom = 70.0
texture = ExtResource("13_nbeer")

[node name="SquadName" type="Label" parent="SquadNameBG"]
layout_mode = 0
offset_left = 27.0
offset_top = 13.0
offset_right = 139.0
offset_bottom = 36.0
theme_override_fonts/font = ExtResource("8_ev5ey")
text = "Squad Name"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 72.0
offset_top = 376.0
offset_right = 568.0
offset_bottom = 416.0

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer"]
layout_mode = 2

[node name="Begin" parent="." instance=ExtResource("13_hpqig")]
layout_mode = 0
offset_left = 192.0
offset_top = 432.0
offset_right = 452.0
offset_bottom = 588.0
theme_override_fonts/font = ExtResource("8_ev5ey")
theme_override_font_sizes/font_size = 40
text = "Begin Quest"
icon = null

[connection signal="Clicked" from="Directional" to="." method="_on_directional_left_clicked"]
[connection signal="Clicked" from="Directional2" to="." method="_on_directional_right_clicked"]
[connection signal="Clicked" from="Begin" to="." method="_on_begin_clicked"]
